Add name() to GameUser